--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+    <title>Седона — небольшой городок в Аризоне,заслуживающий большего!</title>
+</head>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<body>
+    <header>
+        <nav>
+            <a>
+          <img src="img/logo.svg" width="138" height="70" alt="Логотип городка Сидона>
+        </a>
+            <ul>
+                <li><a href="#">Информация</a></li>
+                <li><a href="#">Фото и видео</a></li>
+                <li><a href="#">Карта штата</a></li>
+                <li><a href="#">Гостиницы</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h1>Седона</h1>
+        <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <ul>
+            <li>
+                <h2>Настоящий городок</h2>
+                <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                <img src="img/icon-1.svg" width="49" height="64.23" alt="домик">
+                <h3>Жильё</h3>
+                <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <img src="img/icon-3.svg" width="72" height="70" alt="бургер">
+                <h3>Еда</h3>
+                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                <img src="img/icon-2.svg" width="64" height="77" alt="бургер">
+                <h3>Сувениры</h3>
+                <p>Не только китайского, но и местного производства!</p>
+            </li>
+            <li>
+                <h2>Там есть Мост дьявола</h2>
+                <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                <h3>небольшая площадь</h3>
+                <p>все достопримечательности находятся очень близко</p>
+                <h3>красивая дорога</h3>
+                <p>ехать в седону из лас-вегаса совсем не скучно!</p>
+                <h3>мало туристов</h3>
+                <p>большинство едет в гранд каньон и толпится там</p>
 
-  </body>
+            </li>
+        </ul>
+    </section>
+    <footer>
+        <p><img src="img/logo_html.svg" width="104" height="36"><a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a></p>
+    </footer>
+</body>
+
 </html>
