--- a/index.html
+++ b/index.html
@@ -3,56 +3,116 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона — небольшой городок в Аризоне,заслуживающий большего!</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a>
-          <img src="img/logo.svg" width="138" height="70" alt="Логотип городка Сидона>
-        </a>
+    <main>
+        <header>
+            <nav>
+                <a>
+                    <img src="img/logo.svg" width="138" height="70" alt="Логотип городка Сидона">
+                </a>
+                <img src="https://via.placeholder.com/1200x56" alt="top menu">
+                <ul>
+                    <!-- Основное меню -->
+                    <li><a href="#">Информация</a></li>
+                    <li><a href="#">Фото и видео</a></li>
+                    <li><a href="#">Карта штата</a></li>
+                    <li><a href="#">Гостиницы</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <div class="welcome">
+                <h1>Седона</h1>
+                <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+                <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+                <img src="https://via.placeholder.com/1200x725" alt="Welcome">
+            </div>
             <ul>
-                <li><a href="#">Информация</a></li>
-                <li><a href="#">Фото и видео</a></li>
-                <li><a href="#">Карта штата</a></li>
-                <li><a href="#">Гостиницы</a></li>
+                <li>
+                    <div>
+                        <h2>Настоящий городок</h2>
+                        <p>№1</p>
+                        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                        <img src="https://via.placeholder.com/400x256" alt="Rectangle Color #81B3D2">
+                        <img src="https://via.placeholder.com/800x256" alt="Image1">
+                    </div>
+                    <div>
+                        <img src="img/icon-1.svg" width="49" height="65" alt="домик">
+                        <h3>Жильё</h3>
+                        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                        <img src="img/icon-3.svg" width="72" height="70" alt="бургер">
+                        <h3>Еда</h3>
+                        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                        <img src="img/icon-2.svg" width="64" height="77" alt="сувенир">
+                        <h3>Сувениры</h3>
+                        <p>Не только китайского, но и местного производства!</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="https://via.placeholder.com/800x256" alt="Image2">
+                    <img src="https://via.placeholder.com/400x256" alt="Rectangle Color #81B3D2">
+                    <h2>Там есть Мост дьявола</h2>
+                    <p>№2</p>
+                    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                    <h3>Небольшая площадь</h3>
+                    <p>№3</p>
+                    <p>Все достопримечательности находятся очень близко</p>
+                    <h3>Красивая дорога</h3>
+                    <p>№4</p>
+                    <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                    <h3>Мало туристов</h3>
+                    <p>№5</p>
+                    <p>Большинство едет в Гранд каньон и толпится там</p>
+                </li>
             </ul>
-        </nav>
-    </header>
-    <section>
-        <h1>Седона</h1>
-        <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-        <ul>
-            <li>
-                <h2>Настоящий городок</h2>
-                <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-                <img src="img/icon-1.svg" width="49" height="64.23" alt="домик">
-                <h3>Жильё</h3>
-                <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-                <img src="img/icon-3.svg" width="72" height="70" alt="бургер">
-                <h3>Еда</h3>
-                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                <img src="img/icon-2.svg" width="64" height="77" alt="бургер">
-                <h3>Сувениры</h3>
-                <p>Не только китайского, но и местного производства!</p>
-            </li>
-            <li>
-                <h2>Там есть Мост дьявола</h2>
-                <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-                <h3>небольшая площадь</h3>
-                <p>все достопримечательности находятся очень близко</p>
-                <h3>красивая дорога</h3>
-                <p>ехать в седону из лас-вегаса совсем не скучно!</p>
-                <h3>мало туристов</h3>
-                <p>большинство едет в гранд каньон и толпится там</p>
-
-            </li>
-        </ul>
-    </section>
+        </section>
+        <section>
+            <h2>Заинтересовались?</h2>
+            <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <img src="https://via.placeholder.com/568x86" alt="Rectangle Color #766357">
+            <form action="https://echo.htmlacademy.ru/courses" method="post" class="search">
+                <input type="search" name="q" placeholder="Поиск по сайту" class="input">
+                <input type="submit" value="Найти" name="btn">
+            </form>
+            <img src="https://via.placeholder.com/1199x594" alt="Map">
+        </section>
+    </main>
     <footer>
-        <p><img src="img/logo_html.svg" width="104" height="36"><a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a></p>
+        <div>
+            <img src="https://via.placeholder.com/1200x120" alt="rectangle">
+            <ul>
+                <li>
+                    <p>#visitSEDONA</p>
+                    <p>+7 800 555-86-28</p>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/twitter_logo.svg" width="17" height="17" alt="лого Twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/fb_icon.svg" width="12" height="22" alt="иконка Facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/youtube_logo.svg" width="20" height="16" alt="иконка youtube">
+                    </a>
+                </li>
+                <li>
+                    <p>WEBSITE BY
+                        <a href="https://htmlacademy.ru/intensive/htmlcss">
+                            <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
+                        </a>
+                    </p>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
