--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
                     <li><a href="#">Информация</a></li>
                     <li><a href="#">Фото и видео</a></li>
                     <li><a href="#">Карта штата</a></li>
-                    <li><a href="#">Гостиницы</a></li>
+                    <li><a href="catalog.html">Гостиницы</a></li>
                 </ul>
             </nav>
         </header>
         <section>
             <div class="welcome">
-<<<<<<< Updated upstream
-                <h1>Седона</h1>
-                <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
-                <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-                <img src="https://via.placeholder.com/1200x725" alt="Welcome">
+                <<<<<<< Updated upstream <h1>Седона</h1>
+                    <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+                    <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+                    <img src="https://via.placeholder.com/1200x725" alt="Welcome">
             </div>
             <ul>
                 <li>
@@ -70,12 +69,12 @@
                     <p>Большинство едет в Гранд каньон и толпится там</p>
                 </li>
             </ul>
-=======
-                <p>Welcome</p>
-                <p>to the gorgeous</p>
-                <h1>Седона</h1>
-                <p>"Because the Grand Canyon sucks"</p>
-                <img src="https://via.placeholder.com/1200x509" alt="Welcome">
+            =======
+            <p>Welcome</p>
+            <p>to the gorgeous</p>
+            <h1>Седона</h1>
+            <p>"Because the Grand Canyon sucks"</p>
+            <img src="https://via.placeholder.com/1200x509" alt="Welcome">
             </div>
         </section>
         <section>
@@ -126,7 +125,7 @@
             <h3>Мало туристов</h3>
             <p>№5</p>
             <p>Большинство едет в Гранд каньон и толпится там</p>
->>>>>>> Stashed changes
+            >>>>>>> Stashed changes
         </section>
         <section>
             <h2>Заинтересовались?</h2>
