--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,7 @@
                     <button type="submit">Показать</button>
                 </div>
             </form>
-            <img src="https://via.placeholder.com/1200x217" alt="фильтр отелей">
+            <img src="img/background.png" alt="фон">
         </div>
         <h3>Найдено: 3</h3>
         <p>Сортировка:</p>
@@ -62,40 +62,61 @@
         <ul>
             <li>
                 <div>
-                    <img src="https://via.placeholder.com/135x90" alt="фото">
+                    <img src="img/hotel1.png" width="135" height="90" alt="гостиница Amara Resort & Spa">
                     <h3>Amara Resort & Spa</h3>
                     <img src="img/star.svg" alt="звёздочка">
                     <img src="img/star.svg" alt="звёздочка">
                     <img src="img/star.svg" alt="звёздочка">
                     <img src="img/star.svg" alt="звёздочка">
-                    <p>Гостиница</p>
-                    <p>Подробнее</p>
-                    <p>Забронировать</p>
+                    <table>
+                        <tr>
+                            <td>Гостиница</td>
+                            <td>от 4000 <span>&#8381;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Подробнее</td>
+                            <td>Забронировать</td>
+                        </tr>
+                    </table>
                     <p>Рейтинг: 8,5</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <img src="https://via.placeholder.com/135x90" alt="фото">
+                    <img src="img/hotel2.png" width="135" height="90" alt="гостиница Desert Quail Inn">
                     <h3>Desert Quail Inn</h3>
                     <img src="img/star.svg" alt="звёздочка">
                     <img src="img/star.svg" alt="звёздочка">
                     <img src="img/star.svg" alt="звёздочка">
-                    <p>Гостиница</p>
-                    <p>Подробнее</p>
-                    <p>Забронировать</p>
+                    <table>
+                        <tr>
+                            <td>Гостиница</td>
+                            <td>от 3000 <span>&#8381;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Подробнее</td>
+                            <td>Забронировать</td>
+                        </tr>
+                    </table>
                     <p>Рейтинг: 8,9</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <img src="https://via.placeholder.com/135x90" alt="фото">
+                    <img src="img/hotel3.png" width="135" height="90" alt="гостиница Villas at Poco Diablo">
                     <h3>Villas at Poco Diablo</h3>
                     <img src="img/star.svg" alt="звёздочка">
                     <img src="img/star.svg" alt="звёздочка">
-                    <p>Гостиница</p>
-                    <p>Подробнее</p>
-                    <p>Забронировать</p>
+                    <table>
+                        <tr>
+                            <td>Гостиница</td>
+                            <td>от 2000 <span>&#8381;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Подробнее</td>
+                            <td>Забронировать</td>
+                        </tr>
+                    </table>
                     <p>Рейтинг: 9,2</p>
                 </div>
             </li>
