--- a/index.html
+++ b/index.html
@@ -25,63 +25,17 @@
             </nav>
         </header>
         <section>
-            <div class="welcome">
-                <<<<<<< Updated upstream <h1>Седона</h1>
-                    <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
-                    <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-                    <img src="https://via.placeholder.com/1200x725" alt="Welcome">
-            </div>
-            <ul>
-                <li>
-                    <div>
-                        <h2>Настоящий городок</h2>
-                        <p>№1</p>
-                        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-                        <img src="https://via.placeholder.com/400x256" alt="Rectangle Color #81B3D2">
-                        <img src="https://via.placeholder.com/800x256" alt="Image1">
-                    </div>
-                    <div>
-                        <img src="img/icon-1.svg" width="49" height="65" alt="домик">
-                        <h3>Жильё</h3>
-                        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-                        <img src="img/icon-3.svg" width="72" height="70" alt="бургер">
-                        <h3>Еда</h3>
-                        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                        <img src="img/icon-2.svg" width="64" height="77" alt="сувенир">
-                        <h3>Сувениры</h3>
-                        <p>Не только китайского, но и местного производства!</p>
-                    </div>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/800x256" alt="Image2">
-                    <img src="https://via.placeholder.com/400x256" alt="Rectangle Color #81B3D2">
-                    <h2>Там есть Мост дьявола</h2>
-                    <p>№2</p>
-                    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-                    <h3>Небольшая площадь</h3>
-                    <p>№3</p>
-                    <p>Все достопримечательности находятся очень близко</p>
-                    <h3>Красивая дорога</h3>
-                    <p>№4</p>
-                    <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-                    <h3>Мало туристов</h3>
-                    <p>№5</p>
-                    <p>Большинство едет в Гранд каньон и толпится там</p>
-                </li>
-            </ul>
-            =======
             <p>Welcome</p>
             <p>to the gorgeous</p>
             <h1>Седона</h1>
             <p>"Because the Grand Canyon sucks"</p>
-            <img src="https://via.placeholder.com/1200x509" alt="Welcome">
-            </div>
+            <img src="img/welcome.jpg" width="1200" height="509" alt="скалы">
         </section>
         <section>
-            <div>
+            <div class="welcome">
                 <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
                 <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-                <img src="https://via.placeholder.com/1200x216" alt="Welcome">
+                <img src="https://via.placeholder.com/1200x216" alt="Rectangle">
             </div>
         </section>
         <section>
@@ -90,42 +44,43 @@
                 <p>№1</p>
                 <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 <img src="https://via.placeholder.com/400x256" alt="Rectangle Color #81B3D2">
-                <img src="https://via.placeholder.com/800x256" alt="Image1">
+                <img src="img/image2.png" width="800" height="256" alt="городок Седона">
             </div>
         </section>
         <section>
             <div>
                 <img src="img/icon-1.svg" width="49" height="65" alt="домик">
                 <h3>Жильё</h3>
-                <p>Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
+                <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </div>
             <div>
                 <img src="img/icon-3.svg" width="72" height="70" alt="бургер">
                 <h3>Еда</h3>
-                <p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </div>
             <div>
                 <img src="img/icon-2.svg" width="64" height="77" alt="сувенир">
                 <h3>Сувениры</h3>
-                <p>Не только китайского, но и местного<br> производства!</p>
+                <p>Не только китайского, но и местного производства!</p>
             </div>
         </section>
         <section>
-            <img src="https://via.placeholder.com/800x256" alt="Image2">
-            <img src="https://via.placeholder.com/400x256" alt="Rectangle Color #81B3D2">
-            <h2>Там есть Мост дьявола</h2>
-            <p>№2</p>
-            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-            <h3>Небольшая площадь</h3>
-            <p>№3</p>
-            <p>Все достопримечательности находятся очень близко</p>
-            <h3>Красивая дорога</h3>
-            <p>№4</p>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            <h3>Мало туристов</h3>
-            <p>№5</p>
-            <p>Большинство едет в Гранд каньон и толпится там</p>
-            >>>>>>> Stashed changes
+            <div>
+                <img src="img/image3.jpg" width="800" height="256" alt="мост Дьявола">
+                <img src="https://via.placeholder.com/400x256" alt="Rectangle Color #81B3D2">
+                <h2>Там есть Мост дьявола</h2>
+                <p>№2</p>
+                <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                <h3>Небольшая площадь</h3>
+                <p>№3</p>
+                <p>Все достопримечательности находятся очень близко</p>
+                <h3>Красивая дорога</h3>
+                <p>№4</p>
+                <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <h3>Мало туристов</h3>
+                <p>№5</p>
+                <p>Большинство едет в Гранд каньон и толпится там</p>
+            </div>
         </section>
         <section>
             <h2>Заинтересовались?</h2>
@@ -135,38 +90,46 @@
                 <input type="search" name="q" placeholder="Поиск по сайту" class="input">
                 <input type="submit" value="Найти" name="btn">
             </form>
-            <img src="https://via.placeholder.com/1199x594" alt="Map">
+            <img src="img/map.jpg" width="1199" height="474" alt="Карта">
         </section>
     </main>
     <footer>
+        <img src="https://via.placeholder.com/1200x120" alt="rectangle">
         <div>
-            <img src="https://via.placeholder.com/1200x120" alt="rectangle">
+            <p>#visitSEDONA</p>
+            <p>+7 800 555-86-28</p>
+        </div>
+        <div>
             <ul>
                 <li>
-                    <p>#visitSEDONA</p>
-                    <p>+7 800 555-86-28</p>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/twitter_logo.svg" width="17" height="17" alt="лого Twitter">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/fb_icon.svg" width="12" height="22" alt="иконка Facebook">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/youtube_logo.svg" width="20" height="16" alt="иконка youtube">
-                    </a>
-                </li>
-                <li>
-                    <p>WEBSITE BY
-                        <a href="https://htmlacademy.ru/intensive/htmlcss">
-                            <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
+                    <div>
+                        <a href="#">
+                            <img src="img/twitter_logo.svg" width="17" height="17" alt="лого Twitter">
                         </a>
-                    </p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="#">
+                            <img src="img/fb_icon.svg" width="12" height="22" alt="иконка Facebook">
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="#">
+                            <img src="img/youtube_logo.svg" width="20" height="16" alt="иконка youtube">
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p>WEBSITE BY
+                            <a href="https://htmlacademy.ru/intensive/htmlcss">
+                                <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
+                            </a>
+                        </p>
+                    </div>
                 </li>
             </ul>
         </div>
