styles.css + корректировка index.html

--- a/catalog.html
+++ b/catalog.html
@@ -64,10 +64,8 @@
                 <div>
                     <img src="img/hotel1.png" width="135" height="90" alt="гостиница Amara Resort & Spa">
                     <h3>Amara Resort & Spa</h3>
-                    <img src="img/star.svg" alt="звёздочка">
-                    <img src="img/star.svg" alt="звёздочка">
-                    <img src="img/star.svg" alt="звёздочка">
-                    <img src="img/star.svg" alt="звёздочка">
+                    <!--4 звездочки -->
+                    <span>&#9733; &#9733; &#9733; &#9733;</span>
                     <table>
                         <tr>
                             <td>Гостиница</td>
@@ -85,9 +83,8 @@
                 <div>
                     <img src="img/hotel2.png" width="135" height="90" alt="гостиница Desert Quail Inn">
                     <h3>Desert Quail Inn</h3>
-                    <img src="img/star.svg" alt="звёздочка">
-                    <img src="img/star.svg" alt="звёздочка">
-                    <img src="img/star.svg" alt="звёздочка">
+                    <!--3 звездочки -->
+                    <span>&#9733; &#9733; &#9733;</span>
                     <table>
                         <tr>
                             <td>Гостиница</td>
@@ -105,8 +102,8 @@
                 <div>
                     <img src="img/hotel3.png" width="135" height="90" alt="гостиница Villas at Poco Diablo">
                     <h3>Villas at Poco Diablo</h3>
-                    <img src="img/star.svg" alt="звёздочка">
-                    <img src="img/star.svg" alt="звёздочка">
+                    <!--2 звездочки -->
+                    <span>&#9733; &#9733;</span>
                     <table>
                         <tr>
                             <td>Гостиница</td>
