--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="page-body">
     <main class="shadow">
         <header class="main-header">
             <nav class="main-navigation">
@@ -142,7 +142,7 @@
         <img src="img/map.jpg" width="1199" height="474" alt="Карта" class="map">
     </main>
     <!-- Main footer -->
-    <footer class="main-footer">
+    <footer class="page-footer main-footer">
         <div class="container">
             <div>
                 <p class="footer-contacts a">
