исправления внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -37,9 +37,11 @@
                 <form action="https://echo.htmlacademy.ru/" method="get" class="filter-box">
                     <div class="inner-container checkbox-position">
                         <h4>Инфраструктура:</h4>
-                        <label for="id-pool" name="id-pool_lbl">
-                            <input type="checkbox" id="id-pool" value="value-pool" checked>
-                        Бассейн</label>
+                        <!--<label for="id-pool" name="pool">-->
+                        <!--<input type="checkbox" class="checkbox-pool-btn" id="id-pool" name="pool" value="value-pool" checked>-->
+                        <!--Бассейн</label>-->
+                        <input type="checkbox" class="checkbox-pool-btn" id="id-pool" name="pool" value="value-pool" checked>
+                        <label for="id-pool" name="pool">Бассейн</label>
                         <!--  -----------  -->
                         <label for="id-park" name="id-park_lbl">
                             <input type="checkbox" id="id-park" value="value-parking" checked>
