--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z"/>
                             </svg>
                             </a>
-                            <label for="id-number-child" class="string-input">Дети:
+                            <label for="id-number-child" class="string-input lbl-number-child">Дети:
                                 <a href="#"><svg class="symbol-left" width="12" height="3" viewBox="0 0 12 3" fill="none">
                                     <rect width="12" height="3"/>
                                     </svg>
